SERVER-31302 only refresh complete logicalSessionRecords